--- a/templates/about.html
+++ b/templates/about.html
@@ -22,8 +22,8 @@
      Cement Strength Prediction Using Advanced MLT
     </h1>
     <nav>
-        <a href="/templates/index.html" class="text-lg font-semibold text-gray-800 hover:text-blue-500">Home</a>
-        <a href="/templates/contact.html" class="text-lg font-semibold text-gray-800 hover:text-blue-500 ml-4">Contact</a>
+        <a href="/" class="text-lg font-semibold text-gray-800 hover:text-blue-500">Home</a>
+        <a href="/contact" class="text-lg font-semibold text-gray-800 hover:text-blue-500 ml-4">Contact</a>
       </nav>
    </div>
   </header>
