--- a/templates/howitworks.html
+++ b/templates/howitworks.html
@@ -148,9 +148,9 @@
         <a href="/templates/index.html">Cement Strength Prediction Using Advanced MLT</a>
       </h1>
       <nav class="flex space-x-4">
-        <a href="/templates/index.html">Home</a>
-        <a href="/templates/about.html">About</a>
-        <a href="/templates/contact.html">Contact</a>
+        <a href="/">Home</a>
+        <a href="/about">About</a>
+        <a href="/contact">Contact</a>
       </nav>
     </div>
   </header>
