--- a/templates/index.html
+++ b/templates/index.html
@@ -158,13 +158,13 @@
 			<div class="row">
 				<div class="col-lg-6 h-100 text-center my-auto mx-auto">
 					<ul class="list-inline mb-1">
-						<li class="list-inline-item"><a href="/templates/about.html">About</a></li>
+						<li class="list-inline-item"><a href="/about">About</a></li>
 						<li class="list-inline-item">&sdot;</li>
-						<li class="list-inline-item"><a href="/templates/contact.html">Contact</a></li>
+						<li class="list-inline-item"><a href="/contact">Contact</a></li>
 						<li class="list-inline-item">&sdot;</li>
-						<li class="list-inline-item"><a href="/templates/howto.html">How to Predict</a></li>
+						<li class="list-inline-item"><a href="/howtopredict">How to Predict</a></li>
 						<li class="list-inline-item">&sdot;</li>
-						<li class="list-inline-item"><a href="/templates/howitworks.html">How it works</a></li>
+						<li class="list-inline-item"><a href="/howitworks">How it works</a></li>
 					</ul>
 					<p class="text-muted small mb-2 mb-lg-0">&copy; G29@ITS 2024-25. All Rights Reserved.</p>
 				</div>
