--- a/templates/contact.html
+++ b/templates/contact.html
@@ -158,7 +158,7 @@
   <header>
     <div class="container mx-auto px-4 py-6 flex justify-between items-center">
       <h1>
-        <a href="/templates/index.html">Cement Strength Prediction Using Advanced MLT</a>
+        <a href="/">Cement Strength Prediction Using Advanced MLT</a>
       </h1>
 
       <!-- Hamburger Menu Button -->
@@ -168,9 +168,9 @@
 
       <!-- Navigation Links -->
       <nav id="navbar" class="hidden md:flex space-x-4">  <!-- Hidden by default on small screens -->
-        <a href="/templates/index.html">Home</a>
-        <a href="/templates/about.html">About</a>
-        <a href="/templates/contact.html">Contact</a>
+        <a href="/">Home</a>
+        <a href="/about">About</a>
+        <a href="/contact">Contact</a>
       </nav>
     </div>
   </header>
