--- a/templates/howitworks.html
+++ b/templates/howitworks.html
@@ -145,7 +145,7 @@
   <header>
     <div class="container mx-auto px-4 py-6 flex justify-between items-center">
       <h1>
-        <a href="/templates/index.html">Cement Strength Prediction Using Advanced MLT</a>
+        <a href="/">Cement Strength Prediction Using Advanced MLT</a>
       </h1>
       <nav class="flex space-x-4">
         <a href="/">Home</a>
