--- a/templates/about.html
+++ b/templates/about.html
@@ -5,6 +5,7 @@
   <title>
    Cement Strength Prediction Using Advanced MLT
   </title>
+  <link href="https://storage.googleapis.com/a1aa/image/xVxAc1cJJvNonZz4nK6RtW3k6qmGgmbn5ehsQ6oCyaE.jpg" rel="shortcut icon"/>
   <script src="https://cdn.tailwindcss.com">
   </script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
@@ -63,7 +64,7 @@
    <div class="container mx-auto px-4">
     <div class="flex justify-between items-center py-4">
      <a class="text-xl font-bold" href="/">
-      <img alt="Company logo with a stylized letter 'C' in blue and white" height="50" src="https://storage.googleapis.com/a1aa/image/U1iJe1fnQ7nBnUi1xg3FKAqfQ7NbsOfWhL3NXEfUtalkCf39E.jpg" width="150"/>
+      <img alt="Company logo with a stylized letter 'C' in blue and white" height="50" src="https://storage.googleapis.com/a1aa/image/xVxAc1cJJvNonZz4nK6RtW3k6qmGgmbn5ehsQ6oCyaE.jpg" width="150"/>
      </a>
      <div class="hidden md:flex space-x-4">
       <a class="nav-link text-gray-700" href="/">
@@ -187,7 +188,7 @@
   <footer class="bg-gray-800 text-white py-6">
    <div class="container mx-auto px-4 text-center">
     <p>
-     © 2024 APinfoTech.in All rights reserved.
+     © 2025 APinfoTech.in All rights reserved.
     </p>
    </div>
   </footer>
